added extra validations to TeamServiceImpl.java